--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "Digital-Portfolio",
     "description": "An open source digital Portfolio designed with ReactJSX and with different ParticlesJS background on all sections.",
-    "homepage": "",
+    "homepage": "https://ashwinkumar1211.github.io/Digital-Portfolio",
     "version": "1.0.0",
     "private": true,
     "author": {
-        "name": "Anglesvar",
-        "email": "anglesvar.cheenu98@gmail.com",
-        "url": "https://github.com/anglesvar"
+        "name": "Ashwin",
+        "email": "ashwinak1211@gmail.com",
+        "url": "https://github.com/ashwinak1211"
     },
     "dependencies": {
         "@popperjs/core": "^2.1.1",
@@ -21,13 +21,14 @@
         "react-circular-progressbar": "^2.0.3",
         "react-dom": "^16.13.1",
         "react-easy-emoji": "^1.5.0",
-        "react-particle-image": "^1.0.1",
-        "react-particles-js": "^3.3.0",
+     
         "react-photo-gallery": "^8.0.0",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.4.1",
+        "react-tsparticles": "^1.35.2",
         "react-typist": "^2.0.5",
+        "tsparticles": "^1.35.2",
         "typescript": "^3.8.3"
     },
     "scripts": {
